--- a/Application/pubspec.yaml
+++ b/Application/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   permission_handler: ^8.2.6
   uuid: ^3.0.5 
   provider: ^6.0.1 
+  form_field_validator: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
